crates/apollo-compiler/test_data/diagnostics/0104_invalid_type_in_arg.txt
Error: `thisIsWrong` field must be of an input type
   ╭─[0104_invalid_type_in_arg.graphql:7:3]
   │
 7 │   thisIsWrong: OutputType
   │                ─────┬────  
   │                     ╰────── this is an object
   │ 
   │ Help: Scalars, Enums, and Input Objects are input types. Change `thisIsWrong` field to take one of these input types.
───╯
Error: cannot find type `number` in this document
    ╭─[0104_invalid_type_in_arg.graphql:12:21]
    │
 12 │   undefinedTypes(a: number, b: number): OperationResult!
    │                     ───┬──  
    │                        ╰──── not found in this scope
────╯
Error: cannot find type `number` in this document
    ╭─[0104_invalid_type_in_arg.graphql:12:32]
    │
 12 │   undefinedTypes(a: number, b: number): OperationResult!
    │                                ───┬──  
    │                                   ╰──── not found in this scope
────╯
Error: `a` field must be of an input type
    ╭─[0104_invalid_type_in_arg.graphql:13:15]
    │
 13 │   outputTypes(a: OutputType, b: OperationResult): ID!
    │                  ─────┬────  
    │                       ╰────── this is an object
    │ 
    │ Help: Scalars, Enums, and Input Objects are input types. Change `a` field to take one of these input types.
────╯
Error: `b` field must be of an input type
    ╭─[0104_invalid_type_in_arg.graphql:13:30]
    │
 13 │   outputTypes(a: OutputType, b: OperationResult): ID!
    │                                 ───────┬───────  
    │                                        ╰───────── this is a union
    │ 
    │ Help: Scalars, Enums, and Input Objects are input types. Change `b` field to take one of these input types.
────╯

